# devops-change-ai-researcher

./: .gitignore  README.md  agent_research_studio.py  agent_researcher.py  agent_tools.py  analysis_summary.txt  final_report_vite-2026-01-11.md  final_report_vite-20260111.md  kubernetes_tracker.py  langgraph.json  main.py  new_agent.py  promots.py  pyproject.toml  research_request.md  rssponsive_agent_researcher.py  settings.py  utils.py
.github/workflows/: agent_research.yaml  ci.yaml  pr.yaml
.langgraph_api/: .langgraph_ops.pckl
archived_reports/: final_report-gh-actions.md  final_report-github.md  final_report-k8s135.md  final_report_argocd-latest_changes-20251226.md  final_report_azure-aks-cni-comparison-20260109.md  final_report_azurerm-aks-upgrade-2026-01-14.md  final_report_terragrunt-release-2025-12-26.md  final_report_upgrade-1.33_to_1.35-2026-01-09.md  final_report_vite-briefing-2026-01-11.md  research_request.md
devops_agent/: agent_builder.py  graph.py  state.py
redis-charts/: config-map.yaml  deploy.yaml  service.yaml
reports/: final_report_memory-omri-20260116.md  research_request.md  research_request_update.md  user_profile.md
