[project]
name = "devops-change-ai-researcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "actions-toolkit>=0.1.15",
    "datetime>=6.0",
    "ddgs>=9.10.0",
    "deepagents>=0.3.0",
    "fastmcp>=2.13.3",
    "googlesearch-python>=1.3.0",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.1",
    "langchain-mcp-adapters>=0.1.14",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.1.3",
    "langchain-openapi>=0.1.1",
    "langgraph>=1.0.4",
    "langgraph-cli[inmem]>=0.4.9",
    "openai>=2.11.0",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "black>=25.12.0",
    "pylint>=4.0.4",
    "mypy>=1.19.1",
]
